api/k8s/production/account-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-svc
  template:
    metadata:
      labels:
        app: account-svc
    spec:
      containers:
        - name: account-svc
          image: hostcode0301/account-svc:v1.0.0
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: account-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: account-svc
  ports:
    - name: account-svc
      protocol: TCP
      port: 5252
      targetPort: 5252
    - name: artistsgrpc
      protocol: TCP
      port: 666
      targetPort: 666
