api/k8s/production/board-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: board-svc
  template:
    metadata:
      labels:
        app: board-svc
    spec:
      containers:
        - name: board-svc
          image: hostcode0301/board-svc:v1.0.0
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: board-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: board-svc
  ports:
    - name: board-svc
      protocol: TCP
      port: 5277
      targetPort: 5277
    - name: artistsgrpc
      protocol: TCP
      port: 666
      targetPort: 666
