api/k8s/production/draw-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: draw-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: draw-svc
  template:
    metadata:
      labels:
        app: draw-svc
    spec:
      containers:
        - name: draw-svc
          image: draplus/draw-svc:v0.5.0
          resources:
            limits:
              cpu: 900m
              memory: "900Mi"
            requests:
              cpu: 750m
              memory: "750Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: draw-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: draw-svc
  ports:
    - name: draw-svc
      protocol: TCP
      port: 5284
      targetPort: 5284
