api/k8s/production/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://draplus.netlify.app"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
spec:
  rules:
    - host: localhost
      http:
        paths:

          # Account service
          - path: /api/account
            pathType: Prefix
            backend:
              service: 
                name: account-clusterip-svc
                port:
                  number: 5252

          # Admin service
          - path: /api/admin
            pathType: Prefix
            backend:
              service: 
                name: admin-clusterip-svc
                port:
                  number: 5244

          # Board service
          - path: /api/board
            pathType: Prefix
            backend:
              service: 
                name: board-clusterip-svc
                port:
                  number: 5277

          # Draw service
          - path: /api/draw
            pathType: Prefix
            backend:
              service: 
                name: draw-clusterip-svc
                port:
                  number: 5284
